examples/errors/oop_private_method.vut
class Student() {
    fn _secret() {
        out("secret")
    }
}

let s = Student()
s._secret()
